--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
 html{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: lightgrey;
+    align-items: center;
 }
 header{
     display: block;
