--- a/css/main.css
+++ b/css/main.css
@@ -3,19 +3,23 @@ html{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: lightgrey;
     align-items: center;
+    text-align: center;
 }
 header{
     display: block;
-    border: 5px black;
     padding: 5px 5px 5px 5px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 50px;
     font-weight: bold;
 }
+footer{
+    display: block;
+    border: soild 1px red;
+}
 /* ids */
 #header{
     display: block;
-    border: 3px blue;
+    border: solid 1px blue;
     padding: 5px 5px 5px 5px;
 }
 
