--- a/css/main.css
+++ b/css/main.css
@@ -22,3 +22,10 @@ footer{
 }
 
 /* classes */
+.dotImage {
+    height: 50px;
+    width: 50px;
+    background-color: white;
+    border-radius: 50%;
+    display: inline-block;
+}
